--- a/www/app/src/app/subscribe/subscribe.page.html
+++ b/www/app/src/app/subscribe/subscribe.page.html
@@ -4,27 +4,22 @@
     <div class="box-subscribe">
       <img class="logo" src="http://static.localhost/assets/img/simplis-logo-B100.svg"
         alt="L'assurance professionnelle des Auto-Entrepreneurs et des Indépendants">
-      <p class="claimer">"C'est parti pour vous assurer au meilleur tarif et en quelques clics !"</p>
-      <div style="width: 100%;">
-        
-      </div>
+      <p class="claimer" color="secondary">"C'est parti pour vous assurer au meilleur tarif et en quelques clics !"</p>
       <app-stepper></app-stepper>
       <form>
-
-       
-
-          <ion-input 
-            label="Quel activité que vous souhaitez assurer ? " 
-            label-placement="floating" 
-            fill="outline" 
-            placeholder="Enter text"
-            ></ion-input>
-
-            <ion-button [disabled]="true" color="primary">
-              Next 
-              <ion-icon name="arrow-forward-circle-outline"></ion-icon>
-            </ion-button>
-
+        <fieldset>
+          <legend>Quel activité que vous souhaitez assurer ? </legend>
+          <ion-list>
+            <ion-item>
+              <ion-input [clearInput]="true" placeholder="Enter text">
+              </ion-input>
+            </ion-item>
+            </ion-list>
+        </fieldset>
+        <ion-button [disabled]="true" color="secondary">
+          Next
+          <ion-icon name="arrow-forward-circle-outline"></ion-icon>
+        </ion-button>
       </form>
     </div>
   </div>
