--- a/www/app/src/app/subscribe/subscribe.page.html
+++ b/www/app/src/app/subscribe/subscribe.page.html
@@ -8,7 +8,7 @@
       <app-stepper [current]="subscription.currentStep" (stepEvent)="setStep($event)"></app-stepper>
       <form>
         <fieldset *ngIf="subscription.currentStep==1">
-          <legend>Quel activité que vous souhaitez assurer ? </legend>
+          <legend>Quel produit recherchez-vous ? </legend>
           <ion-list>
             <ion-item>
               <ion-input [clearInput]="true" placeholder="Enter text">
@@ -41,17 +41,21 @@
             </ion-item>
             </ion-list>
         </fieldset>
-        <fieldset *ngIf="subscription.currentStep==3">
+        <fieldset *ngIf="subscription.currentStep==3" class="step3">
           <legend>Notre offre sur mesure pour vous !</legend>
-          <ion-list>
-            <ion-item>
-              <ion-input [clearInput]="true" placeholder="Enter text">
-              </ion-input>
-            </ion-item>
-            </ion-list>
+          <ion-card color="secondary">
+            <ion-card-header>
+              <ion-card-title>9.99 €</ion-card-title>
+              <ion-card-subtitle>Achat de coupe de bois</ion-card-subtitle>
+            </ion-card-header>
+            <ion-card-content>
+              <div><ion-icon name="download-outline" aria-label="Download devis"></ion-icon></div>
+              <div>Téléchargez votre devis</div>
+            </ion-card-content>
+          </ion-card>
         </fieldset>
-        <ion-button [disabled]="true" color="secondary">
-          Next
+        <ion-button [disabled]="subscription.currentStep<3" [color]="(subscription.currentStep) < 3 ? 'secondary' : 'primary'">
+           {{getStepButtonTitle()}}
           <ion-icon name="arrow-forward-circle-outline"></ion-icon>
         </ion-button>
       </form>
