--- a/www/app/src/app/subscribe/subscribe.page.scss
+++ b/www/app/src/app/subscribe/subscribe.page.scss
@@ -29,7 +29,7 @@
   }
 
   form {
-    
+
     width: 100%;
     text-align: center;
     margin-top: 1rem;
@@ -53,6 +53,25 @@
 
     ion-button {
       margin-top: 2rem;
+    }
+
+    fieldset.step3 {
+      background-color: var(--ion-color-secondary);
+
+      ion-card ion-card-title {
+        font-size: 4rem;
+        font-weight: bold;
+      }
+
+      ion-card ion-card-subtitle {
+        font-size: 1rem;
+        font-weight: bold;
+        text-transform: uppercase;
+      }
+
+      ion-card ion-icon {
+        font-size: 3rem;
+      }
     }
 
   }
