--- a/www/app/src/global.scss
+++ b/www/app/src/global.scss
@@ -83,3 +83,17 @@
 	--ion-color-light-tint: #f5f6f9;
 
 }
+
+ion-button {
+	--color: rgb(255, 255, 255);
+	--ion-color-contrast : rgb(255, 255, 255);
+	--border-radius: 10px;
+}
+.ion-color-primary {
+    --ion-color-base: var(--ion-color-primary, #3880ff) !important;
+    --ion-color-base-rgb: var(--ion-color-primary-rgb, 56, 128, 255) !important;
+    --ion-color-contrast: rgb(255, 255, 255) !important;
+    --ion-color-contrast-rgb: rgb(255, 255, 255) !important;
+    --ion-color-shade: var(--ion-color-primary-shade, #3171e0) !important;
+    --ion-color-tint: var(--ion-color-primary-tint, #4c8dff) !important;
+}
