--- a/www/app/src/app/subscribe/subscribe.page.scss
+++ b/www/app/src/app/subscribe/subscribe.page.scss
@@ -1,9 +1,14 @@
+.main {
+  height: 100vh;
+  margin: 30px 0px;
+  padding: 0 10Px;
+  width: 100vw;
+}
+
 .container {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  height: 100%;
-  margin: 0 30px;
 }
 
 .box-subscribe {
@@ -11,8 +16,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  min-height: 88vh;
-  max-width: 600px;
+  max-width: 400px;
 
   img.logo {
     width: 200px;
@@ -37,8 +41,10 @@
     fieldset {
       border: thick solid var(--ion-color-primary);
       border-radius: 15px;
+      padding-bottom: 2rem;
     }
 
+    .autocomplete,
     legend {
       color: #FFF;
       background: var(--ion-color-primary);
@@ -47,8 +53,42 @@
       border-radius: 10px;
     }
 
+    .autocomplete {
+      height: 201px;
+      margin: 32px -12px -2rem;
+      border-top-left-radius: 0;
+      border-top-right-radius: 0;
+      overflow-y: scroll;
+
+      legend {
+        text-align: left;
+        padding: 10px 0px
+      }
+
+      ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        display:flex;
+        flex-direction: column;
+        li {
+          flex:auto;
+          padding: 10px;
+          font-size: 0.8rem;
+          cursor: pointer;
+          text-align: left;
+          border-bottom: 1px solid #fff;
+        }
+
+        li:hover {
+          background-color: var(--ion-color-secondary);
+        }
+      }
+    }
+
     ion-input {
       text-align: left;
+      margin: 15px 0;
     }
 
     ion-button {
@@ -76,4 +116,10 @@
 
   }
 
+}
+
+@media screen and (min-device-width: 1200px) {
+  .box-subscribe {
+    min-width: 500px;
+  }
 }
