--- a/www/app/src/global.scss
+++ b/www/app/src/global.scss
@@ -99,14 +99,42 @@ ion-button {
 	--ion-color-tint: var(--ion-color-primary-tint, #4c8dff) !important;
 }
 
+input:-webkit-autofill,
+
+input:-webkit-autofill:hover,
+
+input:-webkit-autofill:focus
+
+input:-webkit-autofill,
+
+textarea:-webkit-autofill,
+
+textarea:-webkit-autofill:hover
+
+textarea:-webkit-autofill:focus,
+
+select:-webkit-autofill,
+
+select:-webkit-autofill:hover,
+
+select:-webkit-autofill:focus {
+
+  border:none !important;
+  background-color: transparent !important;
+  -webkit-text-fill-color: inherit !important;
+  /* -webkit-box-shadow: 0 0 0px 1000px #FFFFFF inset; */
+  transition: background-color 5000s ease-in-out 0s !important;
+
+}
+
 /* width */
 ::-webkit-scrollbar {
-	width: 10px;
+	width: 3px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-	background: #f1f1f1;
+	background: transparent;
 }
 
 /* Handle */
@@ -116,5 +144,5 @@ ion-button {
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-	background: #555;
+	background: var(--ion-color-secondary);
 }
