--- a/www/app/src/app/home/home.page.html
+++ b/www/app/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Simplis protected area
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,16 +9,15 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">Simplis protected area</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <div id="container">
     <ion-row class="ion-align-items-center">
       <ion-col>
-        <div>1 of 4</div>
+        Under construction
       </ion-col>
-      
     </ion-row>
   </div>
 </ion-content>
