Fix steppers bugs

--- a/www/app/src/app/subscribe/subscribe.page.html
+++ b/www/app/src/app/subscribe/subscribe.page.html
@@ -60,7 +60,7 @@
         </form>
         <!-- END STEP 2-->
         <!-- STEP 3 -->
-        <form *ngIf="subscription.currentStep==3 && subscription.treated && subscription.activity" >
+        <form *ngIf="subscription.currentStep==3" >
           <fieldset class="step3">
             <legend>Notre offre sur mesure pour vous !</legend>
             <ion-card color="secondary">
