--- a/www/api/templates/pdf/agreements.html.twig
+++ b/www/api/templates/pdf/agreements.html.twig
@@ -5,15 +5,38 @@
     <title>Resume</title>
 </head>
 <body>
-    <div style="margin: 0 auto;display: block;width: 500px;">
-        <table width="100%" border="1">
+    <div style="margin: 0 auto;display: block;width: 650px;">
+        <table width="100%" border="0">
             <tr>
                 <td colspan="2">
-                    <img src="{{imageSrc}}" style="width:200px;"> 
+                    <img src="{{imageSrc}}" style="width:350px; margin-bottom:30px">
+                    <h1 style="font-size:22px">Devis n° {{number}} - {{date}}</h1> 
+                </td>
+            </tr>
+            tr>
+                <td colspan="2">
+                    <h2 style="font-size:20px">Assurance</h2> 
                 </td>
             </tr>
             <tr>
-                <td>Name:</td>
+                <td style="width:20%">Activité assurée :</td>
+                <td>{{activity}}</td>
+            </tr>
+            <tr>
+                <td>Couverture :</td>
+                <td style="font-size:14px;overflow-wrap: break-word;">{{coverage}}</td>
+            </tr>
+            <tr>
+                <td>Price</td>
+                <td>{{price}}</td>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <h2 style="font-size:20px">Entreprise à assurer</h2> 
+                </td>
+            </tr>
+            <tr>
+                <td>Raison sociale:</td>
                 <td>{{name}}</td>
             </tr>
             <tr>
@@ -21,7 +44,11 @@
                 <td>{{address}}</td>
             </tr>
             <tr>
-                <td>Mobile Number:</td>
+                <td>Siret:</td>
+                <td>{{siret}}</td>
+            </tr>
+            <tr>
+                <td>Telephone:</td>
                 <td>{{mobileNumber}}</td>
             </tr>
             <tr>
