Add loader on pdf download

--- a/www/app/src/app/subscribe/subscribe.page.scss
+++ b/www/app/src/app/subscribe/subscribe.page.scss
@@ -116,6 +116,10 @@
       ion-card ion-icon {
         font-size: 3rem;
       }
+      
+      .downLoad{
+        cursor:pointer;
+      }
     }
 
   }
