--- a/www/app/src/app/subscribe/subscribe.page.scss
+++ b/www/app/src/app/subscribe/subscribe.page.scss
@@ -1,8 +1,6 @@
 .main {
-  height: 100vh;
   margin: 30px 0px;
-  padding: 0 10Px;
-  width: 100vw;
+  padding: 0 10px;
 }
 
 .container {
@@ -96,7 +94,7 @@
     }
 
     ion-button {
-      margin-top: 2rem;
+      margin-top: 20px;
     }
 
     fieldset.step3 {
@@ -115,10 +113,6 @@
 
       ion-card ion-icon {
         font-size: 3rem;
-      }
-      
-      .downLoad{
-        cursor:pointer;
       }
     }
 
